feat: refactor EmailService and EnvelopeService to streamline template loading and update paths